// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render with props 1`] = `
<div>
  <dialog>
    <article>
      <header
        class="svelte-11kei0n"
      >
        <a
          aria-label="Close"
          class="close"
          href="#close"
        />
         
        All combinations for
         
        
      </header>
       
      <p
        class="svelte-11kei0n"
      >
        Left-click on a combination to mark it as tried
      </p>
       
      <p
        class="svelte-11kei0n"
      >
        Right-click/long-press on a combination to mark it as correct
      </p>
       
      <br />
       
      <div
        class="grid combo"
      >
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="6669"
        >
          6669
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="6696"
        >
          6696
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="6699"
        >
          6699
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="6966"
        >
          6966
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="6969"
        >
          6969
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="6996"
        >
          6996
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="6999"
        >
          6999
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="9666"
        >
          9666
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="9669"
        >
          9669
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="9696"
        >
          9696
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="9699"
        >
          9699
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="9966"
        >
          9966
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="9969"
        >
          9969
           
        </button>
        <button
          class="combo-btn btn-inverted svelte-11kei0n"
          data-combination="9996"
        >
          9996
           
        </button>
      </div>
       
      <button
        class="btn-inverted clear-btn svelte-11kei0n"
      >
        Clear
      </button>
    </article>
  </dialog>
</div>
`;

exports[`should render without crashing 1`] = `
<div>
  <dialog>
    <article>
      <header
        class="svelte-11kei0n"
      >
        <a
          aria-label="Close"
          class="close"
          href="#close"
        />
         
        All combinations for
         
        
      </header>
       
      <p
        class="svelte-11kei0n"
      >
        Left-click on a combination to mark it as tried
      </p>
       
      <p
        class="svelte-11kei0n"
      >
        Right-click/long-press on a combination to mark it as correct
      </p>
       
      <br />
       
      <p
        class="svelte-11kei0n"
      >
        No combos found.
      </p>
    </article>
  </dialog>
</div>
`;
